--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -142,7 +142,7 @@ pdftable_to_dataframe = function(files, keeppages, start, end, setcols=c(), spli
 
 
 ```{r, echo = TRUE}
-### TABLE 1 PDF 1 -----
+### PDF 1 > PAGE 4 > TABLE 1 -----
 pdf_table <- pdftable_to_dataframe(c('Examples/PDF-1.pdf'), 4, 5, 25, c('Division'
                                                            ,'New Tests (last 7 Days)'
                                                            ,'New Tests (last 8-14 Days)'
